// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plain <a> adds \`rel="noopener noreferrer"\` attribute for external links and does not duplicate, if duplicate is provided 1`] = `
<Plain
  rel="nofollow noopener"
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://example.com/"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> adds \`rel="noopener noreferrer"\` attribute for external links and respects any provided attributes 1`] = `
<Plain
  rel="nofollow"
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://example.com/"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> adds \`rel="noopener noreferrer"\` attribute for external links to handle security vulnerability 1`] = `
<Plain
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://example.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> adds \`rel="noopener"\` attribute for internal links that open new tab 1`] = `
<Plain
  shouldOpenInNewTab={true}
  to="https://www.thumbtack.com/foo"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://www.thumbtack.com/foo"
    rel="noopener"
    target="_blank"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> adds \`rel="noopener"\` attribute for internal links that open new tab 2`] = `
<Plain
  shouldOpenInNewTab={true}
  to="/foo"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="/foo"
    rel="noopener"
    target="_blank"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> adds \`rel="noopener"\` attribute for internal links that open new tab 3`] = `
<Plain
  shouldOpenInNewTab={true}
  to="#foo"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="#foo"
    rel="noopener"
    target="_blank"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> adds attribute to open link in new tab 1`] = `
<Plain
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://example.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> omits \`rel\` attribute for links that open in the same tab 1`] = `
<Plain
  to="https://www.thumbtack.com/foo"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://www.thumbtack.com/foo"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> omits \`rel\` attribute for links that open in the same tab 2`] = `
<Plain
  to="/foo"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="/foo"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> omits \`rel\` attribute for links that open in the same tab 3`] = `
<Plain
  to="#foo"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="#foo"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> omits \`rel\` attribute for links that open in the same tab 4`] = `
<Plain
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://example.com/"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> removes \`href\` if link is disabled 1`] = `
<Plain
  isDisabled={true}
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={true}
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> renders \`children\` passed in 1`] = `
<Plain
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://example.com/"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> renders \`to\` prop as \`href\` 1`] = `
<Plain
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://example.com/"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> renders a anchor tag when a \`to\` is provided 1`] = `
<Plain
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://example.com/"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <a> renders a anchor tag when both \`to\` and \`onClick\` are provided 1`] = `
<Plain
  onClick={[Function]}
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://example.com/"
    onClick={[Function]}
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain <button> renders a button when an \`onClick\` is provided 1`] = `
<Plain
  onClick={[Function]}
>
  <button
    className="plain plainThemePrimary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain <button> renders button of type \`button\` 1`] = `
<Plain
  onClick={[Function]}
>
  <button
    className="plain plainThemePrimary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain <button> renders children passed in 1`] = `
<Plain>
  <button
    className="plain plainThemePrimary"
    disabled={false}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain adds \`dataTest\` prop 1`] = `
<Plain
  dataTest="Duck"
>
  <button
    className="plain plainThemePrimary"
    data-test="Duck"
    disabled={false}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain adds \`dataTest\` prop 2`] = `
<Plain
  dataTest="Duck"
  to="#"
>
  <a
    className="plain plainThemePrimary"
    data-test="Duck"
    disabled={false}
    href="#"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Plain adds proper accessibility attribute 1`] = `
<Plain
  accessibilityLabel="Duck"
>
  <button
    aria-label="Duck"
    className="plain plainThemePrimary"
    disabled={false}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain left and right icons can be used together 1`] = `
<Plain
  iconLeft={
    <svg>
      Swan
    </svg>
  }
  iconRight={
    <svg>
      Duck
    </svg>
  }
>
  <button
    className="plain plainThemePrimary"
    disabled={false}
    type="button"
  >
    <span
      className="flexCenter"
    >
      <svg>
        Swan
      </svg>
      <span
        className="textContainer textContainerLeft textContainerRight"
      >
        Goose
      </span>
      <svg>
        Duck
      </svg>
    </span>
  </button>
</Plain>
`;

exports[`Plain renders icon that is passed in 1`] = `
<Plain
  iconLeft={
    <svg>
      Duck
    </svg>
  }
>
  <button
    className="plain plainThemePrimary"
    disabled={false}
    type="button"
  >
    <span
      className="flexCenter"
    >
      <svg>
        Duck
      </svg>
      <span
        className="textContainer textContainerLeft"
      >
        Goose
      </span>
    </span>
  </button>
</Plain>
`;

exports[`Plain renders inherit theme 1`] = `
<Plain
  theme="inherit"
>
  <button
    className="plain plainThemeInherit"
    disabled={false}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain renders inherit theme 2`] = `
<Plain
  isDisabled={true}
  theme="inherit"
>
  <button
    className="plain plainThemeInherit"
    disabled={true}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain renders primary theme 1`] = `
<Plain
  theme="primary"
>
  <button
    className="plain plainThemePrimary"
    disabled={false}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain renders primary theme 2`] = `
<Plain
  isDisabled={true}
  theme="primary"
>
  <button
    className="plain plainThemePrimary"
    disabled={true}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain renders right icon that is passed in 1`] = `
<Plain
  iconRight={
    <svg>
      Duck
    </svg>
  }
>
  <button
    className="plain plainThemePrimary"
    disabled={false}
    type="button"
  >
    <span
      className="flexCenter"
    >
      <span
        className="textContainer textContainerRight"
      >
        Goose
      </span>
      <svg>
        Duck
      </svg>
    </span>
  </button>
</Plain>
`;

exports[`Plain renders secondary theme 1`] = `
<Plain
  theme="secondary"
>
  <button
    className="plain plainThemeSecondary"
    disabled={false}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain renders secondary theme 2`] = `
<Plain
  isDisabled={true}
  theme="secondary"
>
  <button
    className="plain plainThemeSecondary"
    disabled={true}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain renders tertiary theme 1`] = `
<Plain
  theme="tertiary"
>
  <button
    className="plain plainThemeTertiary"
    disabled={false}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Plain renders tertiary theme 2`] = `
<Plain
  isDisabled={true}
  theme="tertiary"
>
  <button
    className="plain plainThemeTertiary"
    disabled={true}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Themed <a> adds \`rel="noopener noreferrer"\` attribute for external links and does not duplicate, if duplicate is provided 1`] = `
<Themed
  rel="nofollow noopener"
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="https://example.com/"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> adds \`rel="noopener noreferrer"\` attribute for external links and respects any provided attributes 1`] = `
<Themed
  rel="nofollow"
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="https://example.com/"
    rel="nofollow noopener noreferrer"
    target="_blank"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> adds \`rel="noopener"\` attribute for internal links that open new tab 1`] = `
<Themed
  shouldOpenInNewTab={true}
  to="https://www.thumbtack.com/foo"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="https://www.thumbtack.com/foo"
    rel="noopener"
    target="_blank"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> adds \`rel="noopener"\` attribute for internal links that open new tab 2`] = `
<Themed
  shouldOpenInNewTab={true}
  to="/foo"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="/foo"
    rel="noopener"
    target="_blank"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> adds \`rel="noopener"\` attribute for internal links that open new tab 3`] = `
<Themed
  shouldOpenInNewTab={true}
  to="#foo"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="#foo"
    rel="noopener"
    target="_blank"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> adds \`rel\` attribute to handle security vulnerability 1`] = `
<Themed
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="https://example.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> adds attribute to open link in new tab 1`] = `
<Themed
  shouldOpenInNewTab={true}
  to="https://example.com/"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="https://example.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> omits \`rel\` attribute for links that open in the same tab 1`] = `
<Plain
  to="https://www.thumbtack.com/foo"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://www.thumbtack.com/foo"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Themed <a> omits \`rel\` attribute for links that open in the same tab 2`] = `
<Plain
  to="/foo"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="/foo"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Themed <a> omits \`rel\` attribute for links that open in the same tab 3`] = `
<Plain
  to="#foo"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="#foo"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Themed <a> omits \`rel\` attribute for links that open in the same tab 4`] = `
<Plain
  to="https://example.com/"
>
  <a
    className="plain plainThemePrimary"
    disabled={false}
    href="https://example.com/"
    target="_self"
  >
    Goose
  </a>
</Plain>
`;

exports[`Themed <a> removes \`href\` if link is disabled 1`] = `
<Themed
  isDisabled={true}
  to="https://example.com/"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={true}
    target="_self"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> renders \`children\` passed in 1`] = `
<Themed
  to="https://example.com/"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="https://example.com/"
    target="_self"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> renders \`to\` prop as \`href\` 1`] = `
<Themed
  to="https://example.com/"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="https://example.com/"
    target="_self"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> renders a anchor tag when a \`to\` is provided 1`] = `
<Themed
  to="https://example.com/"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="https://example.com/"
    target="_self"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <a> renders an anchor tag when both \`to\` and \`onClick\` are provided 1`] = `
<Themed
  onClick={[Function]}
  to="https://example.com/"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    href="https://example.com/"
    onClick={[Function]}
    target="_self"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed <button> renders a button when an \`onClick\` is provided 1`] = `
<Themed
  onClick={[Function]}
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed <button> renders button of type \`button\` 1`] = `
<Plain
  onClick={[Function]}
>
  <button
    className="plain plainThemePrimary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Goose
  </button>
</Plain>
`;

exports[`Themed <button> renders button of type \`submit\` if provided 1`] = `
<Plain
  onClick={[Function]}
  type="submit"
>
  <button
    className="plain plainThemePrimary"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    Goose
  </button>
</Plain>
`;

exports[`Themed <button> renders children passed in 1`] = `
<Themed>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed adds \`dataTest\` prop 1`] = `
<Themed
  dataTest="Duck"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    data-test="Duck"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed adds \`dataTest\` prop 2`] = `
<Themed
  dataTest="Duck"
  to="#"
>
  <a
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    data-test="Duck"
    disabled={false}
    href="#"
    target="_self"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </a>
</Themed>
`;

exports[`Themed adds proper accessibility attribute 1`] = `
<Themed
  accessibilityLabel="Duck"
>
  <button
    aria-label="Duck"
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed disables button when it is disabled 1`] = `
<Themed
  isDisabled={true}
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={true}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Duck
    </span>
  </button>
</Themed>
`;

exports[`Themed disables button when it is disabled and loading 1`] = `
<Themed
  isDisabled={true}
  isLoading={true}
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={true}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      <span
        className="loaderContainer"
      >
        <span
          className="absoluteCenter"
        >
          <LoaderDots
            size="small"
            theme="inverse"
          >
            <ul
              className="root"
              role="status"
            >
              <li
                className="dot dotThemeInverse dotSizeSmall"
              />
              <li
                className="dot dotThemeInverse dotSizeSmall"
              />
              <li
                className="dot dotThemeInverse dotSizeSmall"
              />
              <li
                className="hiddenText"
              >
                Loading
              </li>
            </ul>
          </LoaderDots>
        </span>
        <span
          className="hidden"
        >
          Duck
        </span>
      </span>
    </span>
  </button>
</Themed>
`;

exports[`Themed disables button while it is loading 1`] = `
<Themed
  isLoading={true}
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={true}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      <span
        className="loaderContainer"
      >
        <span
          className="absoluteCenter"
        >
          <LoaderDots
            size="small"
            theme="inverse"
          >
            <ul
              className="root"
              role="status"
            >
              <li
                className="dot dotThemeInverse dotSizeSmall"
              />
              <li
                className="dot dotThemeInverse dotSizeSmall"
              />
              <li
                className="dot dotThemeInverse dotSizeSmall"
              />
              <li
                className="hiddenText"
              >
                Loading
              </li>
            </ul>
          </LoaderDots>
        </span>
        <span
          className="hidden"
        >
          Duck
        </span>
      </span>
    </span>
  </button>
</Themed>
`;

exports[`Themed renders caution theme 1`] = `
<Themed
  theme="caution"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemeCaution themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders caution theme 2`] = `
<Themed
  isDisabled={true}
  theme="caution"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemeCaution themedButtonWidthAuto"
    disabled={true}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders full width button 1`] = `
<Themed
  width="full"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthFull"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders full width button on small screens 1`] = `
<Themed
  width="full-below-small"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthFullBelowSmall"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders full width button when used within \`InputRow\` 1`] = `
<InputRow>
  <div
    className="root"
  >
    <div
      key=".0"
      style={
        Object {
          "flex": undefined,
        }
      }
    >
      <Themed>
        <button
          className="themedButton themedButtonRoundedBordersLeft themedButtonHasNoRightBorder themedButtonThemePrimary themedButtonWidthFull"
          disabled={false}
          type="button"
        >
          <span
            className="flexWrapper flexWrapperSizeLarge"
          >
            Duck
          </span>
        </button>
      </Themed>
    </div>
    <div
      key=".1"
      style={
        Object {
          "flex": undefined,
        }
      }
    >
      <Themed>
        <button
          className="themedButton themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthFull"
          disabled={false}
          type="button"
        >
          <span
            className="flexWrapper flexWrapperSizeLarge"
          >
            Goose
          </span>
        </button>
      </Themed>
    </div>
  </div>
</InputRow>
`;

exports[`Themed renders icon that is passed in 1`] = `
<Themed
  icon={
    <svg>
      Duck
    </svg>
  }
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      <span
        className="flexCenter"
      >
        <span
          className="iconContainer iconContainerHasRightChildren"
        >
          <svg>
            Duck
          </svg>
        </span>
        Goose
        <span
          className="iconContainer iconContainerHasLeftChildren"
        />
      </span>
    </span>
  </button>
</Themed>
`;

exports[`Themed renders large button 1`] = `
<Themed>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders loading indicator 1`] = `
<Themed
  isLoading={true}
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={true}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      <span
        className="loaderContainer"
      >
        <span
          className="absoluteCenter"
        >
          <LoaderDots
            size="small"
            theme="inverse"
          >
            <ul
              className="root"
              role="status"
            >
              <li
                className="dot dotThemeInverse dotSizeSmall"
              />
              <li
                className="dot dotThemeInverse dotSizeSmall"
              />
              <li
                className="dot dotThemeInverse dotSizeSmall"
              />
              <li
                className="hiddenText"
              >
                Loading
              </li>
            </ul>
          </LoaderDots>
        </span>
        <span
          className="hidden"
        >
          Duck
        </span>
      </span>
    </span>
  </button>
</Themed>
`;

exports[`Themed renders primary theme 1`] = `
<Themed
  theme="primary"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders primary theme 2`] = `
<Themed
  isDisabled={true}
  theme="primary"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={true}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders secondary theme 1`] = `
<Themed
  theme="secondary"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemeSecondary themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders secondary theme 2`] = `
<Themed
  isDisabled={true}
  theme="secondary"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemeSecondary themedButtonWidthAuto"
    disabled={true}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders small button 1`] = `
<Themed
  size="small"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeSmall"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders solid theme 1`] = `
<Themed
  theme="solid"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemeSolid themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders solid theme 2`] = `
<Themed
  isDisabled={true}
  theme="solid"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemeSolid themedButtonWidthAuto"
    disabled={true}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders tertiary theme 1`] = `
<Themed
  theme="tertiary"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemeTertiary themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders tertiary theme 2`] = `
<Themed
  isDisabled={true}
  theme="tertiary"
>
  <button
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemeTertiary themedButtonWidthAuto"
    disabled={true}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      Goose
    </span>
  </button>
</Themed>
`;

exports[`Themed renders themed \`UIAction\` with an icon and no text 1`] = `
<Themed
  accessibilityLabel="Duck"
  icon={
    <svg>
      Duck
    </svg>
  }
>
  <button
    aria-label="Duck"
    className="themedButton themedButtonRoundedBordersLeft themedButtonRoundedBordersRight themedButtonThemePrimary themedButtonWidthAuto"
    disabled={false}
    type="button"
  >
    <span
      className="flexWrapper flexWrapperSizeLarge"
    >
      <span
        className="flexCenter"
      >
        <span
          className="iconContainer"
        >
          <svg>
            Duck
          </svg>
        </span>
        <span
          className="iconContainer"
        />
      </span>
    </span>
  </button>
</Themed>
`;
